--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       </div>
     </nav>
     <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from Europe</h3>
+    <h3 class="text-center">Front-end developer from The Netherlands</h3>
     <div class="about-paragraphs text-center">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -61,13 +61,25 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yoga.png"
+            alt="Yoga project"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/weather.png"
+            alt="Weather project"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="Yogurt project"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
       </div>
     </div>
