--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Portfolio of Charlotte Heideman"
+      content="Charlotte Heideman is a front-end developer based in Europe. Check out her projects and contact her for job inquiries."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Charlotte Heideman</a>
+        <a class="navbar-brand" href="/" title="Homepage">Charlotte Heideman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,13 +40,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="Homepagae"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="About Charlotte Heideman"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Charlotte Heideman"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
