--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="Portfolio of Charlotte Heideman"
-      content="Browse through this portfolio to discover the different projects made by Charlotte Heideman"
+      content="Charlotte Heideman is a front-end developer based in Europe. Check out her projects and contact her for job inquiries."
     />
     <title>Front-end Developer - Charlotte Heideman</title>
     <link
@@ -20,12 +20,12 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Charlotte Heideman</a>
+        <a class="navbar-brand" href="/" title="Homepage">Charlotte Heideman</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,15 +40,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepagae"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Charlotte Heideman"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Charlotte Heideman"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -58,14 +72,18 @@
     <h1 class="text-center">Charlotte Heideman</h1>
     <h3 class="text-center">Front-end developer, based in Europe</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="/about.html#contact" class="primary-link" title="Contact me"
+        >Contact Charlotte Heideman</a
+      >
+      <a href="/about.html" class="secondary-link" title="About me"
+        >About Charlotte Heideman</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-6">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             alt="Yoga project"
             class="img-fluid rounded yoga-project-image"
           />
@@ -79,7 +97,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -93,12 +113,14 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-6">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="Weather project"
             class="img-fluid rounded weather-project-image"
           />
@@ -107,7 +129,7 @@
       <div class="row mt-5">
         <div class="col-6">
           <img
-            src="images/yogurt.png yogurt-project-image"
+            src="/images/yogurt.png yogurt-project-image"
             alt="Yogurt project"
             class="img-fluid rounded"
           />
@@ -121,7 +143,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
       </div>
