--- a/index.html
+++ b/index.html
@@ -72,23 +72,29 @@
     <h1 class="text-center">Charlotte Heideman</h1>
     <h3 class="text-center">Front-end developer, based in Europe</h3>
     <div class="navigation-links mb-5">
-      <a href="/about.html#contact" class="primary-link" title="Contact me"
-        >Contact Charlotte Heideman</a
+      <a
+        href="/about.html#contact"
+        class="primary-link"
+        title="Contact Charlotte Heideman"
+        >Contact Me</a
       >
-      <a href="/about.html" class="secondary-link" title="About me"
-        >About Charlotte Heideman</a
+      <a
+        href="/about.html"
+        class="secondary-link"
+        title="About Charlotte Heideman"
+        >About Me</a
       >
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
             src="/images/yoga.png"
             alt="Yoga project"
-            class="img-fluid rounded yoga-project-image"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -97,14 +103,14 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yoga project"
+            <a href="#" class="primary-link project-link" title="Yoga project"
               >Launch Yoga App</a
             >
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -113,28 +119,31 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Weather project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Weather project"
               >Launch Weather App</a
             >
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
             src="/images/weather.png"
             alt="Weather project"
-            class="img-fluid rounded weather-project-image"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
-            src="/images/yogurt.png yogurt-project-image"
+            src="/images/yogurt.png"
             alt="Yogurt project"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -143,7 +152,10 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Weather project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Weather project"
               >Launch Weather App</a
             >
           </div>
